# LangBot

./: .gitignore  Cargo.toml
src/: app.rs  clock_handle.rs  db_handle.rs  main.rs  random_word_handle.rs  state_handle.rs  telegram_api_handle.rs  translator_handle.rs  user_command_handle.rs
src/db_handle/: models.rs  validation.rs
